syntax = "proto3";

option java_multiple_files = true;
option java_package = "msw.server.core.common";
option java_outer_classname = "NoArgProto";

package msw.server.core.common;

message NoArg {}