syntax = "proto3";

option java_multiple_files = true;
option java_package = "msw.server.rpc.versions";
option java_outer_classname = "RecommendedVersionProto";

package msw.server.rpc.versions;

message RecommendedVersion {
  bool installed = 1;
  string recommendedID = 2;
  repeated string all = 3;
}
