syntax = "proto3";

package msw.server.rpc.versions;

import "msw/server/core/common/NoArg.proto";
import "msw/server/core/common/ServerResponse.proto";
import "msw/server/rpc/versions/VersionIDList.proto";
import "msw/server/rpc/versions/VersionID.proto";
import "msw/server/rpc/versions/VersionDetails.proto";
import "msw/server/rpc/versions/LatestVersion.proto";
import "msw/server/rpc/versions/RecommendedVersion.proto";
import "msw/server/rpc/versions/Progress.proto";

service Versions {
  rpc ListInstalledVersions(msw.server.core.common.NoArg) returns (VersionIDList);
  rpc ListAvailableVersions(msw.server.core.common.NoArg) returns (VersionIDList);
  rpc GetVersionDetails(VersionID) returns (VersionDetails);
  rpc GetLatestRelease(msw.server.core.common.NoArg) returns (LatestVersion);
  rpc GetLatestSnapshot(msw.server.core.common.NoArg) returns (LatestVersion);
  rpc RecommendedVersionAbove(VersionID) returns (RecommendedVersion);
  rpc RecommendedVersionBelow(VersionID) returns (RecommendedVersion);
  rpc InstallVersion(VersionID) returns (stream Progress);
  rpc UninstallVersion(VersionID) returns (msw.server.core.common.ServerResponse);
}
